--- a/server/Makefile
+++ b/server/Makefile
@@ -5,7 +5,7 @@ install_psql:
 	sudo docker pull postgres
 
 runpostgress: 
-	sudo docker run --name my-postgres -e POSTGRES_PASSWORD=mysecretpassword -d postgres
+	sudo docker run --name tonmoy -e POSTGRES_PASSWORD=tonmoy404 -p 5432:5432 -d postgres
 
 startpostgress:
 	sudo docker start my-postgres
