--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,11 @@
-#App
 
 HOST=localhost
-PORT=1234
+PORT=3000
 
 # DB
 
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=mydb
+DB_USER=postgres
+DB_PASS=mysecretpassword
